hphp/hack/test/enum_atom/typing/atom_sugar.php.exp
File "atom_sugar.php", line 26, characters 6-7:
Unknown constant B in EE (Typing[4394])
File "atom_sugar.php", line 28, characters 6-7:
Unknown constant B in EE (Typing[4394])
